--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <div id="home" class="container custom-content animated lightSpeedIn">
-    <div class="col-12" style="margin-top:15%">
+    <div class="col-12" style="">
         <div class="right">
             <p><i class="fa fa-home"></i> Home</p>
         </div>
