--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="card-body">
                     <div id="typed-strings">
                         <p>What's Up?</p>
-                        <p>You are currently viewing Azrial's <strong>Portofolio Website</strong>.</p>
+                        <p>You are currently viewing Azrial's <strong>Portofolio Website</strong>. Sadly.. it is unfinished</p>
                         <p>Enjoy!</p>
                     </div>
                     <span id="typed"></span>
@@ -97,9 +97,9 @@
     <div id="content"></div>
     <div class="custom-footer text-center">
         <div class="col-12">
-            <a class="btn btn-pink mb-2" href="https://instagram.com/justakofi"><i class="fa fa-instagram"></i></a>
-            <a class="btn btn-white mb-2" href="https://github.com/FikriMaulana85"><i class="fa fa-github"></i></a>
-            <a class="btn btn-blue mb-2" href="https://kofidev.my.id"><i class="fa fa-globe"></i></a>
+            <a class="btn btn-pink mb-2" href="https://instagram.com/azrialahmad"><i class="fa fa-instagram"></i></a>
+            <a class="btn btn-white mb-2" href="https://github.com/h2mitsu"><i class="fa fa-github"></i></a>
+            <a class="btn btn-blue mb-2" href="https://h2mitsu.github.io/portofolio/"><i class="fa fa-globe"></i></a>
             <p class="mt-2">Azrial Ahmad</p>
         </div>
     </div>
