--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="card-body">
                     <div id="typed-strings">
                         <p>What's Up?</p>
-                        <p>You are currently viewing Azrial's <strong>Portofolio Website</strong>. Sadly.. it is unfinished</p>
+                        <p>You are currently viewing Azrial's <strong>Portofolio Website</strong>. Sadly.. it is unfinished.</p>
                         <p>Enjoy!</p>
                     </div>
                     <span id="typed"></span>
@@ -75,8 +75,7 @@
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title">Hi! I'm Azrial Ahmad,</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text">Welcome to my portfolio website! My name is Azrial Ahmad, and I am a passionate Informatics student at Universitas Islam Indonesia. As an avid gamer, fitness enthusiast, and aspiring photographer, I am excited to share with you my journey and projects related to my field of study. With a focus on innovation and problem-solving, I strive to make a positive impact on the world through technology. Thank you for visiting my portfolio, and I hope you enjoy browsing through my work.</p>
                             <a href="profile.html" class="card-text"
                                 style="text-decoration: none; color:black;"><b>Learn
                                     More</b> <i class="fa fa-chevron-right"></i></a>
